# wallheaven

./: .gitignore  Cargo.toml  PKGBUILD  README.md  chrome-extension.crx  pbcopy!
.github/workflows/: release.yml  rust.yml
chrome-extension/: README.md  content.js  default.html  found.html  manifest.json  not_found.html  popup.html  popup.js  style.css
examples/: config.toml  setwallpaper.bat  setwallpaper.ps1  setwallpaper.sh
src/: argparse.rs  config.rs  configparse.rs  configuration.rs  enums.rs  errors.rs  files.rs  flags.rs  main.rs  parseargs.rs  setcommands.toml  settings.rs  structs.rs  unix.rs  userpaths.rs  utils.rs  wallhaven.rs  wallhaven.rs.bak  wallheavend.rs  windows.rs
