[package]
name = "wallheaven"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
url = "2.5.2"
config = "0.14.0"
field_accessor = "0.5.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
rand = "0.8.5"
anyhow = "1.0.86"
once_cell = "1.19.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
