[package]
name = "wallheaven"
version = "0.2.4"
edition = "2021"
authors=["Dave Nicholson <me@davenicholson.xyz>"]
homepage = "https://github.com/davenicholson-xyz/wallheaven"
repository = "https://github.com/davenicholson-xyz/wallheaven"
description = "Random image fetcher for wallhaven.cc"
license = "MIT"

[[bin]]
name = "wallheaven"
path = "src/main.rs"

[[bin]]
name = "wallheavend"
path = "src/wallheavend.rs"

[package.metadata.wix]
upgrade-guid = "DF7698BC-B1BB-4CE7-A138-2BA82B613134"
path-guid = "80955291-1670-4D5B-BD30-02793BFD000C"
license = false
eula = false

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking", "json", "rustls-tls"] }
url = "2.5.2"
config = "0.14.0"
field_accessor = "0.5.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
rand = "0.8.5"
anyhow = "1.0.86"
once_cell = "1.19.0"
shlex = "1.3.0"
axum = "0.7.6"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.31.4", features = ["windows"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
